--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -49,7 +49,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  font-family: "Arial", sans-serif;
+  font-family: 'Fredoka One';
   background-color: #fff;
 }
 
@@ -58,4 +58,9 @@ img {
   // height: auto;
   vertical-align: middle;
   margin-bottom: 30px;
+}
+
+.heading {
+  font-family: 'Fredoka One';
+  font-weight:400;
 }
